--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/drawer": "^7.3.12",
     "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
@@ -17,7 +18,8 @@
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-heroicons": "^4.0.0"
+    "react-native-heroicons": "^4.0.0",
+    "react-native-storage": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
