feat: implement See All feature with navigation and dedicated page

--- a/app.json
+++ b/app.json
@@ -1,26 +1,27 @@
 {
   "expo": {
-    "name": "Movie_App",
+    "name": "Movies",
     "slug": "Movie_App",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/customSplash.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/customSplash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#FF0000"
     },
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/customSplash.png",
+        "backgroundColor": "#FF0000"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.anonymous.Movie_App"
     },
     "web": {
       "favicon": "./assets/favicon.png"
